--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,129 @@
-# Compiled class file
-*.class
-
-# Log file
+# ===== SO e gerais =====
+.DS_Store
+Thumbs.db
+desktop.ini
 *.log
+logs/
+*.tmp
+tmp/
+.cache/
+.cache-loader/
+*.swp
+*.swo
 
-# BlueJ files
-*.ctxt
+# ===== IDEs =====
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# JetBrains (IntelliJ/Android Studio/WebStorm/PyCharm)
+.idea/
+*.iml
+*.iws
+out/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# ===== Java (Maven/Gradle) =====
+# Compilação
+target/
+build/
+# Gradle
+.gradle/
+**/build/
+!gradle/wrapper/gradle-wrapper.jar
+# Eclipse
+.classpath
+.project
+.settings/
+# Arquivos gerados
+*.class
 hs_err_pid*
 replay_pid*
+
+# ===== Android (Java/Kotlin) =====
+# Builds e intermediários
+**/app/build/
+**/build/
+.cxx/
+# Gradle local
+gradle-app.setting
+# Config local do SDK/keystore
+local.properties
+# Assinaturas / chaves (NÃO versionar!)
+*.jks
+*.keystore
+*.keystore.properties
+# Relatórios/artefatos
+captures/
+outputs/
+# NDK
+.externalNativeBuild/
+# Google Services (se usar, prefira gerenciar segredos)
+# google-services.json
+# GoogleService-Info.plist
+
+# ===== Python =====
+__pycache__/
+*.py[cod]
+*$py.class
+# Ambientes virtuais
+.venv/
+venv/
+env/
+ENV/
+# Build & dist
+build/
+dist/
+pip-wheel-metadata/
+*.egg-info/
+.eggs/
+# Ferramentas/linters
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.tox/
+.coverage
+.coverage.*
+htmlcov/
+.pyre/
+.pytype/
+.ipynb_checkpoints/
+
+# ===== Node.js / React / Next.js =====
+node_modules/
+# Next.js
+.next/
+.next/cache/
+.vercel/
+.turbo/
+# Saídas de build
+out/
+dist/
+# Testes/coverage
+coverage/
+# Locks (mantenha os lockfiles versionados!)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# ===== Env/secrets (mantenha apenas exemplos) =====
+.env
+.env.*
+!.env.example
+!.env.local.example
+!.env.test.example
+
+# ===== Docker (opcional) =====
+docker-data/
+.docker/
+*.pid
+
+# ===== Misc específicos de projetos =====
+# Lerna / monorepos
+lerna-debug.log
+# Storybook
+.storybook-out/
+# Prisma (se usar em Node)
+# prisma/*.db
